<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="call_police">Call Police</string>
    <string name="date_format_with_time">EEEE,yyyy/MM/dd  HH:mm:ss</string>
    <string name="date_format">EEEE,yyyy/MM/dd</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">
        %1$s!The crime was discovered on %2$s,%3$s,%4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_call">Call Phone</string>
    <string name="no_found_dialer">NoFoundDialer</string>
    <string name="tip_permission_read_contact">Need Read Contacts Permission to get phoneNumber</string>
    <string name="user_granted_permission">User Granted</string>
    <string name="user_cancel">User Cancel</string>
    <string name="user_refuse">User Refuse and not ask anymore</string>
    <string name="view_big_photo">See Big Picture</string>

    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">
        Crime scene photo (not set)
    </string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>

</resources>